--- a/yawp/war/media/css/home.css
+++ b/yawp/war/media/css/home.css
@@ -1,7 +1,9 @@
+/* 
+	Estilos do Cabeçalho da Home
+*/
 div#header
 {
-background-color: #28AF20;
-height:100px;
+height:140px;
 width:960px;
 
 }
@@ -10,7 +12,34 @@ width:960px;
 {
 	margin-left: 80px;	
 }
+div#imglogin
+{
+width:290px;
+height:140px;
+margin-left: 960px;
+margin-top: -140px;
+}
+div#dvlog
+{
+width:290px;
+height:140px;
+margin-left: 960px;
+margin-top: -140px;
+}
 
+div#dvlog li
+{
+display: block;
+padding: 2px;
+font-family: "Georgia", "Verdana", "sans-serif";
+font-size: 1.1em;
+font-style: italic;
+margin-left: -10px;
+}
+
+/*
+Estilos da barra de navegação da home
+*/
 div#nav_link
 {
 color:#000;
@@ -46,45 +75,51 @@ text-decoration: underline;
 #nav_search
 {
 background-color: #00ff20;
-width: 320px;
+width: 280px;
 height: 60px;
 }
 
+/*
+Estilos da barra kateral com últimos comentários
+*/
 #latest
 {
 background-color: #000020;
 width: 280px;
-height: 460px;
-margin-top: -80px;
+height: 540px;
+margin-top: -570px;
 }
 
+
+/*
+Estilos do conteúdo central da home
+*/
 #home_center_head
 {
 width: 970px;
-background-color: #FF00FF;
-margin-left: 280px;
+margin-left: 400px;
 margin-top: 0px;
 height: 80px;
 }
+#home_center_head #speech_2{padding-left:160px;}
+#home_center_head #sp1{position:absolute; margin-left: 70px;margin-top: 50px;padding: 0px;}
+#home_center_head #sp2{position:absolute;margin-left: 580px;margin-top: 50px;}
 
 #home_center_body
 {
 width: 970px;
-background-color: #FF00FF;
-margin-left: 280px;
-margin-top: 0px;
+margin-left: 360px;
+margin-top: 110px;
 height: 380px;
 }
 
+
+/*
+Rodapé
+*/
 #foot
 {
 background-color: #F28B32;
 width: 1250px;
 height: 200px;
-margin-left: 0px;
-}
-
-#center
-{
-	margin-top: -19px;
 }
