--- a/yawp/war/media/css/home.css
+++ b/yawp/war/media/css/home.css
@@ -74,7 +74,6 @@ text-decoration: underline;
 
 #nav_search
 {
-background-color: #00ff20;
 width: 280px;
 height: 60px;
 }
@@ -84,7 +83,6 @@ Estilos da barra kateral com últimos comentários
 */
 #latest
 {
-background-color: #000020;
 width: 280px;
 height: 540px;
 margin-top: -570px;
@@ -119,7 +117,9 @@ Rodapé
 */
 #foot
 {
-background-color: #F28B32;
-width: 1250px;
+background-color: #E68900;
+width: 1260px;
 height: 200px;
+margin-left: -10px;
+padding: 0px;
 }
