--- a/trunk/yawp/war/media/css/custom_classes.css
+++ b/trunk/yawp/war/media/css/custom_classes.css
@@ -1,6 +1,7 @@
 .input_search{
-background-color: #B0E0E6; 
-font: 12px verdana, arial, helvetica, sans-serif;
-color:#003399;
-border:2px solid #000099;
+background-color: #EFEFEF; 
+font: Verdana, Arial, Helvetica, sans-serif;
+font-size: 1.4em;
+color:#A9A9A9;
+border:1px solid #000;
 }
