--- a/trunk/yawp/war/media/css/custom_classes.css
+++ b/trunk/yawp/war/media/css/custom_classes.css
@@ -5,3 +5,15 @@ font-size: 1.4em;
 color:#A9A9A9;
 border:1px solid #000;
 }
+
+.input_login{
+background-color: #EFEFEF; 
+font: Verdana, Arial, Helvetica, sans-serif;
+font-size: 1.4em;
+color:#000;
+border:1px solid #000;
+}
+
+.userLabel{
+color: #0A58A3;
+}
