--- a/yawp/war/media/css/osx.css
+++ b/yawp/war/media/css/osx.css
@@ -1,26 +1,17 @@
-/*
- * SimpleModal OSX Style Modal Dialog
- * http://www.ericmmartin.com/projects/simplemodal/
- * http://code.google.com/p/simplemodal/
- *
- * Copyright (c) 2010 Eric Martin - http://ericmmartin.com
- *
- * Licensed under the MIT license:
- *   http://www.opensource.org/licenses/mit-license.php
- *
- * Revision: $Id: osx.css 242 2010-03-14 00:55:02Z emartin24 $
- *
- */
+#modal-login li, #modal-register li
+{
+list-style-type: none;
+}
 
-#osx-modal-content, #osx-modal-data {display:none;}
+#modal-login, #modal-register, #osx-modal-data {display:none;}
 
 /* Overlay */
 #osx-overlay {background-color:#000; cursor:wait;}
 
 /* Container */
-#osx-container {background-color:#eee; color:#000; font: 16px/24px "Lucida Grande",Arial,sans-serif; padding-bottom:4px; width:600px; -moz-border-radius-bottomleft:6px; -webkit-border-bottom-left-radius:6px; -moz-border-radius-bottomright:6px; -webkit-border-bottom-right-radius:6px; border-radius:0 0 6px 6px; -moz-box-shadow:0 0 64px #000; -webkit-box-shadow:0 0 64px #000;}
-#osx-container a {color:#ddd;}
-#osx-container #osx-modal-title {color:#000; background-color:#ddd; border-bottom:1px solid #ccc; font-weight:bold; padding:6px 8px; text-shadow:0 1px 0 #f4f4f4;}
+#osx-container {background-color:#eee; color:#000; font: 1.3em "Lucida Grande",Arial,sans-serif; padding-bottom:4px; width:600px; -moz-border-radius-bottomleft:6px; -webkit-border-bottom-left-radius:6px; -moz-border-radius-bottomright:6px; -webkit-border-bottom-right-radius:6px; border-radius:0 0 6px 6px; -moz-box-shadow:0 0 64px #000; -webkit-box-shadow:0 0 64px #000;}
+#osx-container a,  #osx-container a:ACTIVE, #osx-container a:HOVER, #osx-container a:VISITED{color:#FF5C00; text-decoration: none; font-size: 1.1em;}
+#osx-container #osx-modal-title {color:#fff; background-color:#0A58A3; border-bottom:1px solid #ccc; font-weight:normal; padding:6px 8px; text-shadow:0 1px 0 #f4f4f4;}
 #osx-container .close {display:none; position:absolute; right:0; top:0;}
 #osx-container .close a {display:block; color:#777; font-weight:bold; padding:6px 12px 0; text-decoration:none; text-shadow:0 1px 0 #f4f4f4;}
 #osx-container .close a:hover {color:#000;}
