--- a/yawp/war/media/css/user.css
+++ b/yawp/war/media/css/user.css
@@ -1,19 +1,21 @@
 #uinfo{ height: 250px; margin-top: -20px; margin-left: -5px; border-bottom: 1px solid;}
 
-#uphoto{ height: 80px; width: 120px; margin: 5px;}
+#uphoto{ height: 80px; width: 120px; margin: 5px; font-family: Georgia, serif; font-size: 0.9em;}
 #uphoto ul{ list-style: none; margin-left: -40px; margin-top: 0px;}
 
-#udata{ width: 1100px; height:120px; margin: 5px; margin-left: 140px; margin-top: -87px; }
+a, a:ACTIVE, a:VISITED, a:HOVER{text-decoration: none;}
+
+#udata{ width: 1100px; height:120px; margin: 5px; margin-left: 140px; margin-top: -87px; font-family: Georgia, serif; font-size: 1.2em;}
 #udata ul{ list-style: none;}
 
-#uname { display: inline; }
+#uname { display: inline;}
 
 #usocial{ margin: 0px; margin-left: -35px; margin-top: -20px;}
 
-#ucomments{ height: 340px; margin-left: -5px;}
+#ucomments{margin-left: -5px; }
 
 #uc_title{ height: 60px;}
 
-#uc_comment{ height: 280px;}
+#uc_comment{ }
 
-#user_c{ border-bottom: 1px solid #ccc}
+.user_c{ border-bottom: 1px solid #ccc}
