--- a/trunk/yawp/war/media/css/home.css
+++ b/trunk/yawp/war/media/css/home.css
@@ -96,7 +96,7 @@ text-decoration: underline;
 
 #nav_search
 {
-width: 770px;
+width: 810px;
 height: 60px;
 margin-top: 30px;
 margin-left: -30px;
@@ -122,12 +122,15 @@ margin-left: 15px;
 
 #head_latest
 {
-font-family: Molengo,arial, "Verdana", "sans-serif";
+font-family: Georgia, serif;
 }
 #body_latest
 {
-border: 1px solid gray;
+border-left: 1px solid gray;
+border-right: 1px solid gray;
+border-top: 1px solid gray;
 height: 490px;
+overflow: hidden;
 }
 
 
@@ -147,8 +150,8 @@ height: 80px;
 font-size: 1.6em;
 }
 
-#home_center_head #sp1{position:absolute; margin-left: 140px;margin-top: 20px;padding: 0px; font-family: 'Nobile', arial, serif; }
-#home_center_head #sp2{position:absolute;margin-left: 520px;margin-top: 20px; color: #FF5C00; font-family: 'Nobile', arial, serif; }
+#home_center_head #sp1{position:absolute; margin-left: 140px;margin-top: 20px;padding: 0px; font-family: Georgia, serif; }
+#home_center_head #sp2{position:absolute;margin-left: 520px;margin-top: 20px; color: #FF5C00; font-family: Georgia, serif; }
 
 #home_center_body
 {
