--- a/yawp/war/media/css/general_style.css
+++ b/yawp/war/media/css/general_style.css
@@ -5,3 +5,6 @@ Estilos para o conteudo
 {
 height: 600px;
 }
+
+#s_company input{ font-size: 1.3em; color:#5d5d5d;}
+#s_user input{ font-size: 1.3em; color:#5d5d5d;}
