--- a/trunk/yawp/war/media/css/user.css
+++ b/trunk/yawp/war/media/css/user.css
@@ -1,4 +1,4 @@
-#uinfo{ height: 250px; margin-top: -20px; margin-left: -5px; border-bottom: 1px solid;}
+#uinfo{ height: 250px; margin-top: -20px; margin-left: -5px; }
 
 #uphoto{ height: 80px; width: 120px; margin: 5px; font-family: Georgia, serif; font-size: 0.9em;}
 #uphoto ul{ list-style: none; margin-left: -40px; margin-top: 0px;}
