--- a/trunk/gdd-saloon/src/templates/list_tw.html
+++ b/trunk/gdd-saloon/src/templates/list_tw.html
@@ -18,7 +18,7 @@
       <td>{{tw.text}}</td>
       <td>
         <div class="basic-modal-content" id="modal_c_{{tw.tweet_id}}">
-          <form action="/add_comment/" method="POST">
+          <form method="POST" class="form_ajax">
             <p>
               <textarea name="txt_c"></textarea><br/>
               <input type="hidden" name="id_tw" value="{{tw.key}}"/>
