--- a/gdd-saloon/src/templates/index.html
+++ b/gdd-saloon/src/templates/index.html
@@ -3,13 +3,13 @@
 <html>
 
 <head>
-	<title>Google Develop-er Day 2010 BR</title>
+	<title>Google Developer Day 2010 BR</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 
 <body>
 	 <div>
-	   <p>{% trans "auth_goo" %}</p>
+	   <p><a href="{{login_url}}">{% trans "auth_goo" %}</a></p>
 	 </div>
 </body>
 </html>
