--- a/trunk/myjobs/src/templates/index.html
+++ b/trunk/myjobs/src/templates/index.html
@@ -2,17 +2,8 @@
 {% get_available_languages as LANGUAGES %}
 <html>
 <head>
-	<title>Central Design</title>
+	<title>My Jobs</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link type="text/css" rel="stylesheet" href="/infra/autocomplete.css">
-    <script type="text/javascript" src="/static/js/jquery-latest.pack.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.dimensions.min.js"></script>
-    <script type="text/javascript" src="/static/js/autocomplete.js"></script>
-	<script type="text/javascript" >
-$(function(){
-  setAutoComplete("bookSearchField", "bookResults", "/ajax/?query=");
-});
-</script>
 	
 </head>
 <body>
@@ -33,5 +24,9 @@ $(function(){
 		</select>
 		 <input type="submit" value="Go" />
 	 </form>
+	 
+	 <h2>{{plist}}</h2>
+	
+	<a href="/portfolio/add">Adicionar Portfolio</a>  
 </body>
 </html>
