--- a/myjobs/src/templates/portfolio_edit.html
+++ b/myjobs/src/templates/portfolio_edit.html
@@ -12,8 +12,8 @@
   <h2>Salvar/Atualizar Portfolio</h2>
   <form action="{{form_action}}" method="POST" enctype="multipart/form-data">
       Imagem:<input type="file" name="img"><br/>
-      Desc: <textarea name="txtDesc"></textarea><br/>
-      Text: <input type="text" name="txtOne"></text>
+      Desc: <textarea name="description"></textarea><br/>
+      Text: <input type="text" name="tags"></text>
       <input type="submit" value="OK" />
   </form>
 </body>
