--- a/trunk/myjobs/src/templates/404.html
+++ b/trunk/myjobs/src/templates/404.html
@@ -1,6 +1,8 @@
-{% extends 'base.html' %}
-{% block title %}Page not found{% endblock %}
-
-{% block content %}
-The page you requested could not be found.
-{% endblock %}
+<html>
+<head>
+    <title>Central Design</title>
+</head>
+<body>
+    <h1>404</h1>
+</body>
+</html>
