--- a/trunk/myjobs/src/templates/base.html
+++ b/trunk/myjobs/src/templates/base.html
@@ -1,53 +1,36 @@
-<!DOCTYPE html 
-     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-    dir="{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}"
-    xml:lang="{% firstof LANGUAGE_CODE 'en' %}"
-    lang="{% firstof LANGUAGE_CODE 'en' %}">
-  <head>
-    <title>{% block title %}{% endblock %} - Nonrel-testapp</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
 
-    {% block css %}
-    {% endblock %}
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+{% block head %}
+{% include 'scripts.html' %}
+{% endblock%}
 
-    {% block preload_js %}
-    {% endblock %}
+<link rel="shortcut icon" type="image/png" href="/static/img/favicon.png" />
 
-    {% block extra-head %}{% endblock %}
-  </head>
+<title>{% block title %}MyJobs {% endblock %}</title>
 
-  <body>
-    <div id="header">
-      <a id="logo" href="/">Nonrel-testapp</a>
-    </div>
+<meta name="author" content="YaW IT" />
+<meta name="description" content="myjobs" />
+<meta name="keywords" content="myjobs" />
 
-    <div class="columns">
-      <div id="content" class="column">
-        {% block content-header %}
-          {% if error %}<div class="error">{{ error }}</div>{% endif %}
-          {% if info %}<div class="info">{{ info }}</div>{% endif %}
-          {% if messages %}
-            {% for message in messages %}
-              <div class="info">{{ message }}</div>
-            {% endfor %}
-          {% endif %}
-        {% endblock %}
+</head>
 
-        {% block content %}{% endblock %}
-      </div>
-
-      <div id="sidebar" class="column">
-        {% block sidebar %}
-        {% endblock %}
-      </div>
-    </div>
-
-    <div id="footer">
-      <p>Powered by <a href="http://www.allbuttonspressed.com/projects/django-nonrel">Django-nonrel</a></p>
-    </div>
-
-    {% block js %}
-    {% endblock %}
-  </body>
+<body>
+  <div class="container">
+      {% block header %} 
+        {% include 'header.html' %}
+      {% endblock %}
+        
+      {% block content%} {% endblock %}
+      
+      {% block footer %}
+        <div class="footer">
+          <img src="/static/img/footer.jpg" />
+        </div>
+      {% endblock %}
+      
+  </div>
+</body>
 </html>
