--- a/trunk/myjobs/src/templates/scripts.html
+++ b/trunk/myjobs/src/templates/scripts.html
@@ -1,6 +1,5 @@
-<script>
-  var version = 1;
-</script>
+{%load gae_tags %}
+
 <link href="/static/css/myjobs.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="/static/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 <script type="text/javascript" src="/static/js/jquery-1.4.4.min.js"/></script> 
