--- a/myjobs/src/templates/header.html
+++ b/myjobs/src/templates/header.html
@@ -1,10 +1,12 @@
-<div class="header">
-    <img src="/static/img/header.jpg" />
+{%load gae_tags %}
 
-    <img src="/static/img/cadastre.png" class="cadastre" />
-    <img src="/static/img/login.png" class="login" />
+<div class="header">
+    <img src="/static/{%buster%}/img/header.jpg" />
+
+    <img src="/static/{%buster%}/img/cadastre.png" class="cadastre" />
+    <img src="/static/{%buster%}/img/login.png" class="login" />
 
     <a href="/user/add">
-    <img src="/static/img/cadastro_window.png" class="cadastroW" /></a>
-    <img src="/static/img/login_window.png" class="loginW" />
+    <img src="/static/{%buster%}/img/cadastro_window.png" class="cadastroW" /></a>
+    <img src="/static/{%buster%}/img/login_window.png" class="loginW" />
 </div>
