--- a/myjobs/src/templates/scripts.html
+++ b/myjobs/src/templates/scripts.html
@@ -1,10 +1,10 @@
 {%load gae_tags %}
 
-<link href="/static/css/myjobs.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="/static/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-<script type="text/javascript" src="/static/js/jquery-1.4.4.min.js"/></script> 
-<script type="text/javascript" src="/static/js/jquery.fancybox-1.3.4.pack.js"></script>
-<script type="text/javascript" src="/static/js/jquery.easing-1.3.pack.js"></script>
-<script type="text/javascript" src="/static/js/jquery.mousewheel-3.0.4.pack.js"></script>
-<script type="text/javascript" src="/static/js/myjobs.js"></script>
+<link href="/static/{%buster%}/css/myjobs.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="/static/{%buster%}/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+<script type="text/javascript" src="/static/{%buster%}/js/jquery-1.4.4.min.js"/></script> 
+<script type="text/javascript" src="/static/{%buster%}/js/jquery.fancybox-1.3.4.pack.js"></script>
+<script type="text/javascript" src="/static/{%buster%}/js/jquery.easing-1.3.pack.js"></script>
+<script type="text/javascript" src="/static/{%buster%}/js/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="/static/{%buster%}/js/myjobs.js"></script>
 
