--- a/jinbu/src/jinbu/templates/index.html
+++ b/jinbu/src/jinbu/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>JIMBU - Join Our Buy</title>
+<title>JINBU - Join Our Buy</title>
 <link rel="stylesheet" type="text/css" href="/static/css/reset.css"/>
 <link href="/static/css/jimbu.css" rel="stylesheet" type="text/css" />
 </head>
@@ -11,7 +11,7 @@
 
 <!-- Inicio do Div Topo -->
 <div id="Topo">
-  <div id="contTopo"> <img src="/static/imgs/logoJimbu.png" alt="Logo Jimbu" width="499" height="101" class="Logo" /> 
+  <div id="contTopo"> <img src="/static/img/logoJimbu.png" alt="Logo Jimbu" width="499" height="101" class="Logo" /> 
     
     <!-- Inicio do Div Box Login -->
     <div id="boxLogin">
