Inserido páginas nos padrões do Django/MVP

--- a/jinbu/src/jinbu/templates/index.xhtml
+++ b/jinbu/src/jinbu/templates/index.xhtml
@@ -1,17 +1,99 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+{% extends "base.xhtml" %}
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+{% block content%}
 
-	<title>index</title>
-	
-</head>
+  <!-- Inicio do Div do meio Contener --> 
 
-<body>
-  
-<h1>Wheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h1>
-<h2>Jinbu - acesso no {{my_var}}</h2>
-</body>
-</html>
+<div id="Contener">
+  <div id="boxConteudo"> 
+    
+    <!-- Inicio Coluna A -->
+    <div id="contHome-Coluna-A">
+    <h3 class=" tituloVermelho">LAZER</h3>
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+      
+      <!--Div Promocoes-->
+      <div class="div-cont-colunas"></div>
+      <!--Fim Div Promocoes-->
+      
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+      
+      <!--Div Promocoes-->
+      <div class="div-cont-colunas"></div>
+      <!--Fim Div Promocoes-->
+      
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+    </div>
+    <!-- Fim Coluna A --> 
+    
+    <!-- Inicio Coluna B -->
+    <div id="contHome-Coluna-B">
+      <h3 class="tituloVerde"><span class="tituloVerdeSub">BARES</span></h3>
+    <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+      
+      <!--Div Promocoes-->
+      <div class="div-cont-colunas"></div>
+      <!--Fim Div Promocoes-->
+      
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+      
+      <!--Div Promocoes-->
+      <div class="div-cont-colunas"></div>
+      <!--Fim Div Promocoes-->
+      
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+    </div>
+    <!-- Fim Coluna B --> 
+    
+    <!-- Inicio Coluna C -->
+    <div id="contHome-Coluna-C">
+    <h3 class="tituloLaranja">SERVIÇOS</h3>
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+      
+      <!--Div Promocoes-->
+      <div class="div-cont-colunas"></div>
+      <!--Fim Div Promocoes-->
+      
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+      
+      <!--Div Promocoes-->
+      <div class="div-cont-colunas"></div>
+      <!--Fim Div Promocoes-->
+      
+      <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
+        <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
+      </div>
+    </div>
+    <!-- Fim Coluna C --> 
+    
+    <!-- Inicio Sidebar -->
+    <div id="Sidebar">
+      <div id="boxNews"> <img src="/static/img/iconNews.png" width="180" height="57" />
+        <label>
+          <input name="textNews" type="text" class="textNews" id="textNews" value="E-Mail" />
+        </label>
+        <a href="#"><img src="/static/img/btnNewsEnviar.jpg" alt="Enviar" width="80" height="29" /></a> </div>
+      <img src="/static/img/facebook.jpg" alt="Siga-nos Twitter" width="200" height="280" class="margBottomImg" /> <img src="/static/img/imgTwiter.png" alt="Siga-nos Twitter" width="200" height="78" /> </div>
+    <!-- Fim Sidebar -->
+    <div class="clearFloat"></div>
+  </div>
+</div>
+
+<!-- Fim do Div do meio Contener --> 
+{% endblock%}
