--- a/jinbu/src/jinbu/templates/cadastroPromocao.xhtml
+++ b/jinbu/src/jinbu/templates/cadastroPromocao.xhtml
@@ -1,61 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>JIMBU - Join Our Buy</title>
-<link rel="stylesheet" type="text/css" href="css/reset.css"/>
-<link href="css/jimbu.css" rel="stylesheet" type="text/css" />
-</head>
+{% extends "base.xhtml" %}
 
-<body>
-
-<!-- Inicio do Div Topo -->
-<div id="Topo">
-  <div id="contTopo"> <img src="imgsFixas/logoJimbu.png" alt="Logo Jimbu" width="499" height="101" class="Logo" /> 
-    
-    <!-- Inicio do Div Box Login -->
-    <div id="boxLogin">
-      <p><a href="#" class="link-txtCadastro">Cadastra</a></p>
-      <p class="txtLogin">Login</p>
-      <input name="Login" type="text" class="inputLogin" id="Login" value="E-Mail" />
-      <input name="Senha" type="password" class="inputLogin" id="Senha" value="Senha" />
-      <a href="#" class="btnOkLogin"><img src="imgsFixas/btnOkLogin.jpg" alt="botão Acessar" width="26" height="22" /></a> </div>
-    <!-- Fim do Box Login --> 
-    
-    <!-- Inicio do Div Box Login -->
-    <div id="boxCidades">
-      <h5 class="txtCidades">Rio Grande do Sul</h5>
-      <span class="boxbtnCidade"><a href="#"><img src="imgsFixas/btnCidades.jpg" alt="Trocar Cidade" width="85" height="21" class="btnCidades"></a></span> </div>
-    <!-- Fim do Box Login --> 
-    
-    <!-- Inicio do Div Menu -->
-    <div id="Menu">
-      <ul>
-        <li><a href="#" class="link-MenuLeft">OFERTAS</a></li>
-        <li><a href="#" class="link-MenuLeft">EMPRESA</a></li>
-        <li><a href="#" class="link-MenuRight">COMO FUNCIONA</a></li>
-      </ul>
-    </div>
-    <!-- Fim do Div Menu --> 
-    
-    <!-- Inicio do Div Categoria -->
-    <div id="boxCategoria">
-      <p class="txtCategoria">CATEGORIA</p>
-      <span class="bgSelecte">
-      <select name="categoria" size="1" class="selecte" dir="ltr" lang="pt">
-        <option>Escolha uma categoria</option>
-        <option>Lazer</option>
-        <option>Bares e Restaurantes</option>
-        <option>Cursos</option>
-      </select>
-      </span> </div>
-    <!-- Fim do Div Categoria --> 
-    
-  </div>
-  <!-- Fim do Div Topo --> 
-  
-</div>
-
+{% block content%}
 <!-- Inicio do Div do meio Contener -->
 <div id="Contener">
   <div id="boxConteudo">
@@ -173,7 +118,7 @@
 
 </div>
 <!-- Fim do Div do meio Contener --> 
-
+{
 <!-- Inicio do Div Rodape -->
 <div id="Rodape">
   <div id="boxRodape">
@@ -217,3 +162,4 @@
 
 </body>
 </html>
+{%endblock%}
