--- a/jinbu/src/jinbu/templates/index.xhtml
+++ b/jinbu/src/jinbu/templates/index.xhtml
@@ -9,7 +9,7 @@
     
     <!-- Inicio Coluna A -->
     <div id="contHome-Coluna-A">
-    <h3 class=" tituloVermelho">{{c_tit1}}</h3>
+    <h3 class=" tituloVermelho">{{c_tits.tit1}}</h3>
       <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
         <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
       </div>
@@ -22,7 +22,7 @@
     
     <!-- Inicio Coluna B -->
     <div id="contHome-Coluna-B">
-      <h3 class="tituloVerde"><span class="tituloVerdeSub">BARES</span></h3>
+      <h3 class="tituloVerde"><span class="tituloVerdeSub">{{c_tits.tit2}}</span></h3>
     <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
         <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
       </div>
@@ -47,7 +47,7 @@
     
     <!-- Inicio Coluna C -->
     <div id="contHome-Coluna-C">
-    <h3 class="tituloLaranja">SERVIÇOS</h3>
+    <h3 class="tituloLaranja">{{c_tits.tit3}}</h3>
       <div id="boxPromo-Cont"> <img src="/static/img/imgLaser01.jpg" width="230" height="150" alt="Promo" />
         <p class="txtPromo-Info"><a href="#" class="link-Promo">Cruzeiro de Carnaval para Buenos Aires e Punta - MSC Armonia 9 Noites para 2 pessoas + 3° Passageiro Grátis (De 9.628,98 por 4.303,89)</a></p>
       </div>
